Bug 275840 - Random behavior after cancelling "copy to local collection" from Magnatune
Summary: Random behavior after cancelling "copy to local collection" from Magnatune
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Services/Magnatune (other bugs)
Version First Reported In: 2.8.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-16 20:00 UTC by Maarten ter Huurne
Modified: 2025-07-20 13:49 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maarten ter Huurne 2011-06-16 20:00:55 UTC
Version:           2.4.1 (using KDE 4.6.3) 
OS:                Linux

Amarok pops up a warning when you try to copy a Magnatune album to your local collection, telling you that it would be copying the preview version. One time I selected Cancel on that dialog Amarok didn't respond at all (hang), another time I selected Cancel on that dialog Amarok would show the Organize Files dialog.

Reproducible: Always

Steps to Reproduce:
- go to Magnatune album list
- on any album, right click and select "Copy to Collection" followed by "Local Collection"
- select to make a straight copy (no transcode)
- on the warning dialog, press Cancel


Actual Results:  
One time Amarok was hanging with the warning dialog still visible. I tried clicking OK, Cancel and the close button on the warning dialog, but nothing happened. I had to kill the Amarok process.

Several other times, Amarok closed the warning dialog, but immediately after that it opened the Organize Files dialog, for no apparent reason.


Expected Results:  
I would expect the warning dialog to disappear and nothing else to happen.

OS: Linux (x86_64) release 2.6.37.1-1.2-desktop
Compiler: gcc
Comment 1 Maarten ter Huurne 2011-06-16 20:05:31 UTC
Note: I set "Reproducible: Always" because I never saw the expected behavior, even though the behavior I did see was variable.
Comment 2 Aakash 2012-01-02 14:50:36 UTC
I am running Amarok 2.5 and I have followed the steps to reproduce the bugs and I am not having an error as described. After I press the cancel button, I get a window that asks me the location and parameters to be applied while saving. 

PS: Unlike before now I am able to access Magnatue.com here in Nepal.
Comment 3 Myriam Schweingruber 2012-01-02 15:53:55 UTC
Maarten, could you please test with Amarok 2.5 as well?
Comment 4 Myriam Schweingruber 2012-02-21 00:07:24 UTC
It opens the organise collection dialog although the action was canceled. This is certainly a bug.
Comment 5 Maarten ter Huurne 2012-07-16 13:55:59 UTC
Bug still happens with 2.5.0.
Comment 6 MinSik CHO 2012-12-02 11:59:43 UTC
Partially reproducible under amarok 2.6

Not random action has been made, but like Myriam says in the comment, collection dialog is shown, and it is a bug
Comment 7 Oskar Jauch 2013-12-03 13:08:56 UTC
Still reproducible with Amarok 2.8
Comment 8 Tuomas Nurmi 2025-07-20 13:49:55 UTC
Git commit b314650d0b4617bcf4542da36e91d8d499c3e193 by Tuomas Nurmi.
Committed on 20/07/2025 at 13:49.
Pushed by nurmi into branch 'master'.

Don't show transcoding dialog after canceling Magnatune download

M  +1    -0    ChangeLog
M  +2    -2    src/services/magnatune/MagnatuneCollectionLocation.cpp

https://invent.kde.org/multimedia/amarok/-/commit/b314650d0b4617bcf4542da36e91d8d499c3e193