Don't show transcoding dialog after canceling Magnatune download

BUG: 275840